--- a/Loboteca/Loboteca/Views/ELibro/Details.cshtml
+++ b/Loboteca/Loboteca/Views/ELibro/Details.cshtml
@@ -1,72 +1,98 @@
 ﻿@model Loboteca.Models.ELibro
 
 @{
-    ViewData["Title"] = "Details";
+    Layout = null;
 }
 
-<h1>Details</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Detalles del ELibro - Loboteca</title>
+    <link rel="stylesheet" href="~/css/ELibro/ELibroDetails.css" />
+</head>
+<body>
+    <!-- Barra de navegación -->
+    <header>
+        <nav class="navbar">
+            <ul class="logo-left">
+                <li>
+                    <img src="~/images/logo.png" alt="Logo" class="logo">
+                </li>
+            </ul>
+            <h1>LOBOTECA</h1>
+            <ul class="account-right">
+                <li>
+                    <img src="~/images/cuenta.png" alt="Cuenta" class="icono">
+                    <a href="@Url.Action("Perfil", "Perfil")">Cuenta</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-<div>
-    <h4>ELibro</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Titulo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Titulo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Isbn)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Isbn)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDePublicacion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaDePublicacion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Genero)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Genero)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-        <dt class="col-sm-2">
-            Imagen
-        </dt>
-        <dd class="col-sm-10">
-            <img src="@Model.RutaDeImagen" alt="Imagen del ELibro" style="max-width: 200px; max-height: 200px;" />
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Archivo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Archivo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDeAlta)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaDeAlta)
-        </dd>
-        <dt class="col-sm-2">
-            Editorial
-        </dt>
-        <dd class="col-sm-10">
-            @Model.IdEditorialNavigation?.Nombre
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+    <!-- Contenido principal -->
+    <main class="main-section">
+        <h2 class="section-title">Detalles del ELibro</h2>
+
+        <div class="formulario-container">
+            <h4>Información del ELibro</h4>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.Titulo)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Titulo)</dd>
+
+                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.Isbn)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Isbn)</dd>
+
+                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.FechaDePublicacion)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.FechaDePublicacion)</dd>
+
+                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.Genero)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Genero)</dd>
+
+                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.Estado)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Estado)</dd>
+
+                <dt class="col-sm-4">Imagen</dt>
+                <dd class="col-sm-8">
+                    <img src="@Model.RutaDeImagen" alt="Imagen del ELibro" style="max-width: 200px;" />
+                </dd>
+
+                <dt class="col-sm-4">Archivo</dt>
+                <dd class="col-sm-8">
+                    @if (!string.IsNullOrEmpty(Model.Archivo))
+                    {
+                        <a href="@Model.Archivo" target="_blank">Ver archivo PDF</a>
+                    }
+                    else
+                    {
+                        <span>No disponible</span>
+                    }
+                </dd>
+
+                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.FechaDeAlta)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.FechaDeAlta)</dd>
+
+                <dt class="col-sm-4">Editorial</dt>
+                <dd class="col-sm-8">@Model.IdEditorialNavigation?.Nombre</dd>
+            </dl>
+
+            <div class="botones">
+                <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-success">Editar</a>
+                <a asp-action="Index" class="btn btn-secondary">Regresar a la lista</a>
+            </div>
+        </div>
+    </main>
+
+    <!-- Pie de página -->
+    <footer>
+        <p>&copy; Derechos Reservados Universidad Politécnica del Valle de Toluca</p>
+        <div class="social-icons">
+            <a href="#"><img src="~/images/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="~/images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="~/images/email.png" alt="Correo"></a>
+        </div>
+    </footer>
+</body>
+</html>
