--- a/Loboteca/Loboteca/wwwroot/css/ELibro/ELibroDetails.css
+++ b/Loboteca/Loboteca/wwwroot/css/ELibro/ELibroDetails.css
@@ -84,7 +84,7 @@ body {
     margin-bottom: 20px;
 }
 
-/* Contenido de los detalles */
+/* Contenido de la eliminación */
 .formulario-container {
     width: 50%;
     margin: 40px auto;
@@ -110,22 +110,33 @@ dd {
 }
 
 /* Botones */
-.botones {
-    display: flex;
-    justify-content: space-between;
-}
-
-.btn-success, .btn-secondary {
-    background-color: #781c2e;
+.btn-danger {
+    background-color: #dc3545;
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-    .btn-success:hover, .btn-secondary:hover {
-        background-color: #993333;
+    .btn-danger:hover {
+        background-color: #c82333;
+    }
+
+.btn-secondary {
+    background-color: transparent;
+    color: #781c2e;
+    border: 2px solid #781c2e;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+    .btn-secondary:hover {
+        background-color: #781c2e;
+        color: white;
     }
 
 /* Pie de página */
