--- a/Loboteca/Loboteca/Views/Usuarios/Delete.cshtml
+++ b/Loboteca/Loboteca/Views/Usuarios/Delete.cshtml
@@ -53,6 +53,9 @@
                 <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Estado)</dt>
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.Estado)</dd>
 
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Contra)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Contra)</dd>
+
                 <dt class="col-sm-2">@Html.DisplayNameFor(model => model.IdCarreraNavigation)</dt>
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.IdCarreraNavigation.Nombre)</dd>
             </dl>
