--- a/Loboteca/Loboteca/Views/ELibro/Create.cshtml
+++ b/Loboteca/Loboteca/Views/ELibro/Create.cshtml
@@ -69,6 +69,7 @@
                         <option value="Energia">Energía</option>
                         <option value="Robotica y Mecatronica">Robótica y Mecatrónica</option>
                         <option value="Aduanas">Aduanas</option>
+                        <option value="Tronco Comun">Tronco Comun</option>
                     </select>
                     <span asp-validation-for="Genero" class="text-danger"></span>
                 </div>
