--- a/Loboteca/Loboteca/Views/Energia/Energia.cshtml
+++ b/Loboteca/Loboteca/Views/Energia/Energia.cshtml
@@ -41,9 +41,9 @@
                     @foreach (var libro in ViewBag.LibrosRecientes)
                     {
                         <div class="book">
-                            <img src="@libro.RutaImagen" alt="@libro.Titulo">
-                            <!-- Botón Leer Libro añadido -->
-                            <button class="read-button" onclick="window.open('@libro.Archivo', '_blank')">Leer Libro</button>
+                            <a href="@libro.Archivo" target="_blank">
+                                <img src="@libro.RutaDeImagen" alt="@libro.Titulo">
+                            </a>
                             <p class="available">@libro.Estado</p>
                         </div>
                     }
@@ -62,7 +62,7 @@
                     @foreach (var revista in ViewBag.RevistasRecientes)
                     {
                         <div class="magazine">
-                            <img src="@revista.RutaImagen" alt="@revista.Titulo">
+                            <img src="@revista.RutaDeImagen" alt="@revista.Titulo">
                             <!-- Botón Leer Revista añadido -->
                             <button class="read-button" onclick="window.open('@revista.Archivo', '_blank')">Leer Revista</button>
                             <p class="available">@revista.Estado</p>
