--- a/Loboteca/Loboteca/Views/Industri/Industri.cshtml
+++ b/Loboteca/Loboteca/Views/Industri/Industri.cshtml
@@ -40,9 +40,9 @@
                     @foreach (var libro in ViewBag.LibrosRecientes)
                     {
                         <div class="book">
-                            <img src="@libro.RutaDeImagen" alt="@libro.Titulo">
-                            <!-- Botón Leer Libro -->
-                            <button class="read-button" onclick="window.open('@libro.Archivo', '_blank')">Leer Libro</button>
+                            <a href="@libro.Archivo" target="_blank">
+                                <img src="@libro.RutaDeImagen" alt="@libro.Titulo">
+                            </a>
                             <p class="available">@libro.Estado</p>
                         </div>
                     }
@@ -62,8 +62,6 @@
                     {
                         <div class="magazine">
                             <img src="@revista.RutaDeImagen" alt="@revista.Titulo">
-                            <!-- Botón Leer Revista -->
-                            <button class="read-button" onclick="window.open('@revista.Archivo', '_blank')">Leer Revista</button>
                             <p class="available">@revista.Estado</p>
                         </div>
                     }
