--- a/Loboteca/Loboteca/Views/ELibro/Edit.cshtml
+++ b/Loboteca/Loboteca/Views/ELibro/Edit.cshtml
@@ -31,8 +31,18 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="Genero" class="control-label"></label>
-                <input asp-for="Genero" class="form-control" />
+                <label asp-for="Genero" class="control-label">Género</label>
+                <select asp-for="Genero" class="form-control">
+                    <option value="">Seleccione una opción</option>
+                    <option value="Bioquimica">Bioquímica</option>
+                    <option value="Automotriz">Automotriz</option>
+                    <option value="Gestion Industrial">Gestión Industrial</option>
+                    <option value="Programación">Programación</option>
+                    <option value="Energia">Energía</option>
+                    <option value="Robotica y Mecatronica">Robótica y Mecatrónica</option>
+                    <option value="Aduanas">Aduanas</option>
+                    <option value="Tronco Comun">Tronco Comun</option>
+                </select>
                 <span asp-validation-for="Genero" class="text-danger"></span>
             </div>
 
